--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "barryvdh/laravel-dompdf": "^0.9.0",
         "doctrine/dbal": "^2.0",
         "fideloper/proxy": "^4.0",
+        "laminas/laminas-escaper": "^2.12",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "phpoffice/phpword": "^1.2",
         "rap2hpoutre/fast-excel": "^4.1",
         "yajra/laravel-datatables": "^1.5"
     },
